--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./backend:/app
       - ./backend/node_modules:/app/node_modules
+      - ./frontend/dist:/app/frontend/dist
     networks:
       - red-tetris
     environment:
@@ -32,4 +33,3 @@ services:
 networks:
   red-tetris:
     driver: bridge
-
