--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,33 @@
 {
   "name": "red-tetris-backend",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
+  "author": "cybattis and alakhdar",
   "scripts": {
-    "dev": "nodemon index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "prod": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "format": "prettier --write .",
+    "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.config.ts --silent",
+    "test:watch": "NODE_NO_WARNINGS=1 node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.config.ts --watch --silent",
+    "test:coverage": "NODE_NO_WARNINGS=1 node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.config.ts --coverage --silent"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.8.3"
+    "prettier": "^3.8.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
-    "@types/ws": "^8.18.1",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.11",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.3"
   }
 }
