feat: add uuid dependency and game-related type definitions

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -25,7 +25,8 @@
       "@hooks/*": ["src/hooks/*"],
       "@game/*": ["src/game/*"],
       "@utils/*": ["src/utils/*"],
-      "@types/*": ["src/types/*"]
+      "@types/*": ["src/types/*"],
+      "@shared/*": ["../shared/*"]
     },
 
     /* Linting */
