--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "prettier": "^3.8.1",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.8.3"
+    "socket.io-client": "^4.8.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
