fix: update Dockerfile and docker-compose for improved directory structure; adjust tsconfig for test inclusion

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,5 +15,8 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "../shared/**/*"]
+  "include": [
+    "src/**/*",
+    "../shared/**/*"
+, "test/classes/Player.test.ts"  ]
 }
