feat: refactor game action imports and update TypeScript configuration for shared types

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -44,6 +44,9 @@
       "@types/*": [
         "src/types/*"
       ],
+      "@shared/*": [
+        "../shared/*"
+      ]
     },
     /* Linting */
     "strict": true,
@@ -54,6 +57,7 @@
     "noUncheckedSideEffectImports": true
   },
   "include": [
-    "src"
+    "src",
+    "../shared/**/*"
   ]
 }
