--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./shared:/app/shared
       - ./backend:/app/backend
-      - ./backend/node_modules:/app/node_modules
+      - ./backend/node_modules:/app/backend/node_modules
     networks:
       - red-tetris
     environment:
@@ -20,8 +20,9 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
-      - ./frontend/node_modules:/app/node_modules
+      - ./shared:/app/shared
+      - ./frontend:/frontend/app
+      - ./frontend/node_modules:/app/frontend/node_modules
     networks:
       - red-tetris
     environment:
