fix: update Docker configuration and startup script for frontend and fix shared import

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "3000:3000"
     volumes:
       - ./shared:/app/shared
-      - ./frontend:/frontend/app
+      - ./frontend:/app/frontend
       - ./frontend/node_modules:/app/frontend/node_modules
     networks:
       - red-tetris
