--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,9 @@ FROM node:24-alpine
 
 WORKDIR /app/frontend
 
-COPY startup.sh .
+COPY package*.json ./
+
+COPY startup.sh ./
 RUN chmod 777 startup.sh
 
 EXPOSE 3000
